# LightlyShaders

./: CMakeLists.txt  README.md  install.sh  uninstall.sh
src/: CMakeLists.txt  lightlyshaders.cpp  lightlyshaders.h
src/blur/: CMakeLists.txt  blur.cpp  blur.h  blurshader.h  main.h  options.h
src/blur/core/: renderloop.h
src/blur/kcm/: CMakeLists.txt  blur_config.cpp
src/blur/shaders/: copy.frag  downsample.frag  noise.frag  noise_core.frag  upsample_core.frag
src/blur/utils/: c_ptr.h  xcbutils.h
src/blur/wayland/: output_interface.h
src/kcm/: CMakeLists.txt  lightlyshaders_kcm.cpp
src/liblshelper/: CMakeLists.txt  lshelper.cpp  lshelper.h
src/lightlyshaders/: CMakeLists.txt  lightlyshaders.cpp  lightlyshaders.h  lightlyshaders.json  lightlyshaders_config.kcfg
src/lightlyshaders/kcm/: CMakeLists.txt  lightlyshaders_config.ui  lightlyshaders_kcm.cpp  lightlyshaders_kcm.h
src/lightlyshaders/shaders/: lightlyshaders.frag  lightlyshaders_core.frag
